<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.mathquiz.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/title_font"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:text="@string/name"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/name_font" />

            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/body_font" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_viewColor"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:paddingLeft="@dimen/text_padding_left"
            android:paddingRight="@dimen/text_padding_right"
            android:paddingTop="@dimen/text_padding_top"
            android:text="@string/first_question"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_11"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_12"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_13"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_14"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_viewColor"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:paddingLeft="@dimen/text_padding_left"
            android:paddingRight="@dimen/text_padding_right"
            android:paddingTop="@dimen/text_padding_top"
            android:text="@string/second_question"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_21"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_22"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_23"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_24"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_viewColor"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:paddingLeft="@dimen/text_padding_left"
            android:paddingRight="@dimen/text_padding_right"
            android:paddingTop="@dimen/text_padding_top"
            android:text="@string/third_question"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:text="@string/answer_31"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_32"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_viewColor"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:paddingLeft="@dimen/text_padding_left"
            android:paddingRight="@dimen/text_padding_right"
            android:paddingTop="@dimen/text_padding_top"
            android:text="@string/fourth_question"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/answer41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_41"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font" />

        <CheckBox
            android:id="@+id/answer42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_42"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font" />

        <CheckBox
            android:id="@+id/answer43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_43"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font" />

        <CheckBox
            android:id="@+id/answer44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/answer_44"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_viewColor"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:paddingLeft="@dimen/text_padding_left"
            android:paddingRight="@dimen/text_padding_right"
            android:paddingTop="@dimen/text_padding_top"
            android:text="@string/fifth_question"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/body_font"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/math_img" />

        <RadioGroup
            android:id="@+id/group_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_51"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_52"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_53"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />

            <RadioButton
                android:id="@+id/answer54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_54"
                android:textColor="@color/fontColor"
                android:textSize="@dimen/body_font" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="submitQuiz"
                android:text="@string/submit"
                android:textColor="@color/whiteColor" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>